--- a/data/Sequence.fxml
+++ b/data/Sequence.fxml
@@ -2,52 +2,31 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="sequenceDiagramWindow" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ija.project.controller.ClassController">
+<AnchorPane fx:id="sequenceDiagramWindow" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ija.project.controller.ClassController">
     <children>
-        <MenuBar layoutX="-136.0" prefHeight="27.0" prefWidth="736.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
-            <menus>
-                <Menu mnemonicParsing="false" text="File">
-                    <items>
-                        <MenuItem fx:id="loadFileItem" mnemonicParsing="false" onAction="#loadFile" text="Load" />
-                        <MenuItem fx:id="saveFileItem" mnemonicParsing="false" text="Save" />
-                        <MenuItem mnemonicParsing="false" text="Close" />
-                    </items>
-                </Menu>
-                <Menu mnemonicParsing="false" text="Edit">
-                    <items>
-                        <MenuItem mnemonicParsing="false" text="Delete" />
-                    </items>
-                </Menu>
-                <Menu mnemonicParsing="false" text="Help">
-                    <items>
-                        <MenuItem mnemonicParsing="false" text="About" />
-                    </items>
-                </Menu>
-            </menus>
-        </MenuBar>
-        <AnchorPane fx:id="sequenceAnchorPane" layoutX="96.0" layoutY="58.0" maxHeight="720.0" maxWidth="1280.0" onMouseDragged="#setCoordinatesText" onMouseMoved="#setCoordinatesText" prefHeight="520.0" prefWidth="690.0" AnchorPane.topAnchor="58.0">
+        <MenuBar layoutX="-136.0" prefHeight="27.0" prefWidth="736.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+        <AnchorPane fx:id="sequenceAnchorPane" layoutX="102.0" layoutY="60.0" maxHeight="720.0" maxWidth="1280.0" onMouseDragged="#setCoordinatesText" onMouseMoved="#setCoordinatesText" prefHeight="520.0" prefWidth="690.0" AnchorPane.topAnchor="60.0">
          <children>
-            <Label fx:id="nameOfDiagram" layoutX="238.0" layoutY="14.0" text="Press button Show">
+            <Label fx:id="nameOfDiagram" layoutX="360.0" layoutY="25.0" text="Press button Show">
                <font>
                   <Font size="26.0" />
                </font>
             </Label>
          </children></AnchorPane>
-        <ToggleButton fx:id="deleteButton" layoutX="14.0" layoutY="201.0" mnemonicParsing="false" onAction="#changeToDelete" prefHeight="26.0" prefWidth="69.0" text="Delete" />
-        <Button fx:id="addButton" layoutX="14.0" layoutY="156.0" mnemonicParsing="false" onAction="#sequenceAddClass" prefHeight="26.0" prefWidth="69.0" text="Add" />
-        <Text fx:id="coordinatesText" layoutX="100.0" layoutY="54.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="252.13000106811523" />
-        <Text fx:id="boxCoordinates" layoutX="352.0" layoutY="54.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="252.13000106811523" />
-        <Button fx:id="sequenceButton" layoutX="23.0" layoutY="473.0" mnemonicParsing="false" onAction="#switchToClass" text="Switch" textAlignment="CENTER" />
-      <Button layoutX="23.0" layoutY="369.0" mnemonicParsing="false" onAction="#nextDiagram" text="Next" />
-      <Button layoutX="24.0" layoutY="401.0" mnemonicParsing="false" onAction="#previousDiagram" text="Prev" />
-      <Button fx:id="showButton" layoutX="21.0" layoutY="333.0" mnemonicParsing="false" onAction="#setSequencePanes" text="Show" />
+        <ToggleButton fx:id="deleteButton" layoutX="18.0" layoutY="219.0" mnemonicParsing="false" onAction="#changeToDelete" prefHeight="26.0" prefWidth="69.0" text="Delete" />
+        <Button fx:id="addClassButton" layoutX="15.0" layoutY="110.0" mnemonicParsing="false" onAction="#sequenceAddClass" prefHeight="37.0" prefWidth="75.0" text="+Object" />
+        <Text fx:id="coordinatesText" layoutX="71.0" layoutY="54.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="252.13000106811523" />
+        <Text fx:id="boxCoordinates" layoutX="562.0" layoutY="54.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="252.13000106811523" />
+        <Button fx:id="sequenceButton" layoutX="19.0" layoutY="466.0" mnemonicParsing="false" onAction="#switchToClass" text="Switch" textAlignment="CENTER" />
+      <Button layoutX="24.0" layoutY="364.0" mnemonicParsing="false" onAction="#nextDiagram" text="Next" />
+      <Button layoutX="25.0" layoutY="397.0" mnemonicParsing="false" onAction="#previousDiagram" text="Prev" />
+      <Button fx:id="showButton" layoutX="20.0" layoutY="262.0" mnemonicParsing="false" onAction="#setSequencePanes" text="Refresh" />
+      <Button fx:id="addActivityButton" layoutX="15.0" layoutY="158.0" mnemonicParsing="false" onAction="#sequenceAddActivity" prefHeight="37.0" prefWidth="75.0" text="+Aktivita" />
     </children>
 </AnchorPane>
